# kwpm

./: README.md
kubernetes/mariadb/: mariadb-deployment.yaml  mariadb-pv.yaml  mariadb-pvc.yaml  mariadb-secret.yaml  mariadb-svc.yaml
kubernetes/wordpress/: wp-deployment.yaml  wp-ingress.yaml  wp-nginx-config.yaml  wp-pv.yaml  wp-pvc.yaml  wp-secret.yaml  wp-uploads-ini-config.yaml
kwpm-api/: Cargo.toml
kwpm-api/src/: main.rs
kwpm-web/: package-lock.json  package.json
