[package]
name = "kwpm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
gethostname = "0.4"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
